--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -17,7 +17,7 @@ windowrulev2 = workspace 2 silent,class:(.*qutebrowser.*)
 windowrulev2 = workspace 2 silent,class:(.*firefox.*)
 windowrulev2 = workspace 2 silent,class:(.*Thorium-browser.*)
 windowrulev2 = workspace 3 silent,class:(.*Thunderbird.*)
-windowrulev2 = workspace 3 silent,class:(.*thunderbird-beta.*)
+windowrulev2 = workspace 3 silent,class:(.*thunderbird.*)
 windowrulev2 = workspace 3 silent,class:(.*Mail.*)
 windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea-ce.*)
 windowrulev2 = workspace 5 silent,class:(.*steam.*)
