--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -15,6 +15,7 @@ image = [
     { run = 'nsxiv "$1"', desc = "nsxiv", block = false },
     { run = 'imv "$1"', desc = "imv", block = false },
     { run = 'gimp "$1"', desc = "gimp", block = false },
+    { run = 'flatpak run org.gimp.GIMP "$1"', desc = "gimp (flatpak)", block = false },
 ]
 text = [
     { run = 'nvim "$1"', desc = "nvim", block = true },
