--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,6 +1,6 @@
 [[manager.prepend_keymap]]
 on   = [ "l" ]
-run  = "plugin --sync smart-enter"
+run  = 'plugin --sync smart-enter'
 desc = "Enter the child directory, or open the file"
 
 [[manager.prepend_keymap]]
@@ -10,20 +10,25 @@ desc = "Open shell here"
 
 [[manager.append_keymap]]
 on   = [ "g", "v" ]
-run  = "cd /media/tsagrista/Daten/Gaia/Videos"
+run  = 'cd /media/tsagrista/Daten/Gaia/Videos'
 desc = "Go to the $VIDEOS directory"
 
 [[manager.append_keymap]]
 on   = [ "g", "b" ]
-run  = "cd ~/.local/share/gaiasky/data"
+run  = 'cd ~/.local/share/gaiasky/data'
 desc = "Go to the Gaia Sky data directory"
 
 [[manager.append_keymap]]
+on   = [ "b", "g" ]
+run  = 'shell "setwallpaper $0" --confirm --orphan'
+desc = "Set current image as wallpaper"
+
+[[manager.append_keymap]]
 on   = [ "<C-o>" ]
-run  = "back"
+run  = 'back'
 desc = "Go back to the previous directory"
 
 [[manager.append_keymap]]
 on   = [ "<C-i>" ]
-run  = "forward"
+run  = 'forward'
 desc = "Go forward to the next directory"
