feat: rebind firefox.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -1,6 +1,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mod = SUPER
+$mod2 = ALT
 $myterm = kitty
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
@@ -9,8 +10,8 @@ $myterm = kitty
   bind = $mod, escape, exec, tschuss
   bind = $mod, T, togglefloating,
 
+  bind = $mod, W, exec, firefox
   bind = $mod SHIFT, W, exec, qutebrowser
-  bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, T, exec, thunderbird-beta
   bind = $mod SHIFT, P, pseudo, # dwindle
 
