feat: unify wallpaper scripts into a single tool, wallpapermgr.

--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Pictures/wallpaper.jpg
-wallpaper = ,~/Pictures/wallpaper.jpg
+preload = ~/Pictures/current-wallpaper
+wallpaper = ,~/Pictures/current-wallpaper
 splash = false
