--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -13,6 +13,7 @@ pdf = [
 image = [
     { run = 'feh "$1"', desc = "feh", block = false },
     { run = 'krita "$1"', desc = "krita", block = false },
+    { run = 'flatpak run org.kde.krita "$1"', desc = "krita (flatpak)", block = false },
     { run = 'nsxiv "$1"', desc = "nsxiv", block = false },
     { run = 'imv "$1"', desc = "imv", block = false },
     { run = 'gimp "$1"', desc = "gimp", block = false },
