feat: set QT variables for wayland.

--- a/hyprland/hyprland-hidalgo.conf
+++ b/hyprland/hyprland-hidalgo.conf
@@ -4,6 +4,7 @@ monitor=DP-1,3860x2560@60,1920x0,2
 
 env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
+env = QT_ENABLE_HIDPI_SCALING=1
 
 # Source nvidia file
 source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
