--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -32,6 +32,7 @@ exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl 
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 
 # Remove stupid anime wallpaper
@@ -82,18 +83,18 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 8
+    rounding = 6
 
     drop_shadow = true
-    shadow_range = 4
+    shadow_range = 3
     shadow_render_power = 1
     shadow_ignore_window = true
     col.shadow = rgba(1a1a1aaa)
-    shadow_offset = 3 3
+    shadow_offset = 2 2
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 2
+        passes = 2
         new_optimizations = yes
         ignore_opacity = on
         xray = false
