--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -36,3 +36,12 @@ windowrulev2 = float,class:(blueman-manager)
 windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = float,class:(nm-connection-editor)
 windowrulev2 = center,class:(nm-connection-editor)
+
+# Flameshot
+windowrulev2=fakefullscreen,class:^(flameshot)$
+windowrulev2=noanim,class:^(flameshot)$
+windowrulev2=float,class:^(flameshot)$
+windowrulev2=monitor 0,class:^(flameshot)$
+windowrulev2=move 0 -195,class:^(flameshot)$
+windowrulev2=noborder,class:flameshot
+windowrulev2=rounding 0,class:flameshot
