fix: disable Unknown-1 display in NVIDIA.

--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -10,3 +10,6 @@ source = ~/.dotfiles/hyprland/hyprland.conf
 # Disable GPU in qutebrowser
 unbind = $mod SHIFT, W
 bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
+
+# Disable glitched monitor in NVIDIA
+monitor=Unknown-1,disable
