feat: cursor size/theme.

--- a/hyprland/hyprland-hidalgo.conf
+++ b/hyprland/hyprland-hidalgo.conf
@@ -10,4 +10,5 @@ env = QT_ENABLE_HIDPI_SCALING=1
 source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # Overwrite stuff
-env = XCURSOR_SIZE,35
+env = HYPRCURSOR_SIZE,28
+env = XCURSOR_SIZE,28
