--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -29,6 +29,9 @@ exec-once = mpDris2
 exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
 
 # Some default env vars.
+env = HYPRCURSOR_THEME,nordzy-cursor
+env = HYPRCURSOR_SIZE,24
+# For xwayland windows.
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland
