feat: enable gpu rasterization on qutebrowser in hyprland.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -11,7 +11,7 @@ $myterm = kitty
   bind = $mod, T, togglefloating,
 
   bind = $mod, W, exec, firefox
-  bind = $mod SHIFT, W, exec, qutebrowser
+  bind = $mod SHIFT, W, exec, qutebrowser --qt-flag enable-gpu-rasterization
   bind = $mod SHIFT, T, exec, thunderbird-beta
   bind = $mod SHIFT, P, pseudo, # dwindle
 
