--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -9,7 +9,7 @@ source = ~/.dotfiles/hyprland/hyprland.conf
 
 # Disable GPU in qutebrowser
 unbind = $mod SHIFT, W
-bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
+bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
 
 # Disable glitched monitor in NVIDIA
 monitor=Unknown-1,disable
