--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,auto
 exec-once = dunst
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprpaper
-exec-once = waybar
+exec-once = launch-waybar
 exec-once = pasystray
 exec-once = playerctld
 exec-once = blueman-applet
