feat: fix screenshots.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -101,7 +101,7 @@ $myterm = kitty
   binde = $mod CONTROL, j, resizeactive, 0 30
 
 # Screenshots
-  bind = , Print, exec, grim -t jpeg "~/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+  bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
 
 # Media player
   bind = , XF86AudioPrev, exec, playerctl previous
