feat: mpv floating.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -36,6 +36,7 @@ windowrulev2 = float,class:(blueman-manager)
 windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = float,class:(nm-connection-editor)
 windowrulev2 = center,class:(nm-connection-editor)
+windowrulev2 = float,class:(mpv)
 
 # Flameshot
 windowrulev2=fakefullscreen,class:^(flameshot)$
