feat: mod+C brings up speedcrunch.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -25,7 +25,7 @@ $myterm = kitty
   bind = $mod, X, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
   # Calculator
   bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
-  bind = $mod, C, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
+  bind = $mod, C, exec, speedcrunch
   # Pass
   bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
   bind = $mod, V, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
