--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -37,6 +37,9 @@ windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = float,class:(nm-connection-editor)
 windowrulev2 = center,class:(nm-connection-editor)
 windowrulev2 = float,class:(mpv)
+windowrulev2 = center,class:(mpv)
+windowrulev2 = float,class:(.*speedcrunch)
+windowrulev2 = center,class:(.*speedcrunch)
 
 # Flameshot
 windowrulev2=fakefullscreen,class:^(flameshot)$
