feat: group layout in hyprland.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -8,9 +8,9 @@ $myterm = kitty
   bind = $mod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
   bind = $mod, Q, killactive,
   bind = $mod, escape, exec, tschuss
-  bind = $mod, T, togglefloating,
 
-  bind = $mod, W, exec, firefox
+# Browsers
+  bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, W, exec, qutebrowser --qt-flag enable-gpu-rasterization
   bind = $mod SHIFT, T, exec, thunderbird-beta
   bind = $mod SHIFT, P, pseudo, # dwindle
@@ -29,6 +29,10 @@ $myterm = kitty
   # Pass
   bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
   bind = $mod, V, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
+
+# Window layout
+  bind = $mod, W, togglegroup
+  bind = $mod, T, togglefloating
 
 # Move focus with mainMod + arrow keys
   bind = $mod, H, movefocus, l
