--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -29,10 +29,11 @@ exec-once = mpDris2
 exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
 
 # Some default env vars.
-env = HYPRCURSOR_THEME,nordzy-cursor
+env = HYPRCURSOR_THEME,McMojave
+env = XCURSOR_THEME,McMojave
 env = HYPRCURSOR_SIZE,24
-# For xwayland windows.
 env = XCURSOR_SIZE,24
+# For xwayland windows.
 env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
@@ -81,6 +82,16 @@ general {
     col.inactive_border = rgba(666666aa)
 
     layout = dwindle
+}
+
+group {
+    col.border_active = rgba(44aa29ff)
+    col.border_inactive = rgba(666666aa)
+    groupbar {
+      col.active = rgba(44aa29ff)
+      col.inactive = rgba(666666aa)
+      render_titles = true
+    }
 }
 
 decoration {
