--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -106,6 +106,9 @@ $myterm = kitty
 
 # Screenshots
   bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+  bind = $mod, Print, exec, grimshot save area "$(yad --file --directory)/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg";  notify-send "Screenshot saved in chosen location as Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+
+
 
 # Media player
   bind = , XF86AudioPrev, exec, playerctl previous
