--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -27,6 +27,9 @@ exec-once = numlockx
 exec-once = mpDris2
 # Turn off screen after 5 minutes
 exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+# Gnome keyring
+exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
+exec-once = gnome-keyring-daemon --start --components=secrets
 
 # Some default env vars.
 env = HYPRCURSOR_THEME,McMojave
