--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -42,7 +42,7 @@ windowrulev2 = float,class:(.*speedcrunch)
 windowrulev2 = center,class:(.*speedcrunch)
 
 # Flameshot
-windowrulev2=fakefullscreen,class:^(flameshot)$
+windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
 windowrulev2=noanim,class:^(flameshot)$
 windowrulev2=float,class:^(flameshot)$
 windowrulev2=monitor 0,class:^(flameshot)$
