none: attempting nvidia fix for lag.

--- a/hyprland/hyprland-bonobo.conf
+++ b/hyprland/hyprland-bonobo.conf
@@ -1,6 +1,6 @@
 # Monitors
-monitor=DVI-D-1,1920x1080@60,0x0,1
-monitor=DP-1,3860x2560@60,1920x0,2
+monitor=DVI-I-1,1920x1080@60,0x0,1
+#monitor=DP-1,3860x2560@60,1920x0,2
 
 # Force NVIDIA card first.
 env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
@@ -13,3 +13,10 @@ source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # Overwrite stuff
 env = XCURSOR_SIZE,35
+
+debug {
+  damage_tracking = 0
+}
+opengl {
+    nvidia_anti_flicker = false
+}
