--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -13,3 +13,7 @@ bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-r
 
 # Disable glitched monitor in NVIDIA
 monitor=Unknown-1,disable
+
+cursor {
+  no_hardware_cursors = true
+}
