--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -40,6 +40,7 @@ windowrulev2 = float,class:(mpv)
 windowrulev2 = center,class:(mpv)
 windowrulev2 = float,class:(.*speedcrunch)
 windowrulev2 = center,class:(.*speedcrunch)
+windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
 
 # Flameshot
 windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
