fix: terraria to floating window.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -22,6 +22,7 @@ windowrulev2 = workspace 3 silent,class:(.*Mail.*)
 windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea-ce.*)
 windowrulev2 = workspace 5 silent,class:(.*steam.*)
 windowrulev2 = workspace 5 silent,class:(.*steamwebhelper.*)
+windowrulev2 = workspace 5 silent,class:(.*Terraria.*)
 windowrulev2 = workspace 6 silent,class:(.*FreeTube.*)
 windowrulev2 = workspace 9 silent,class:(.*zoom.*)
 windowrulev2 = workspace 9 silent,class:(.*telegram-desktop.*)
@@ -41,6 +42,7 @@ windowrulev2 = center,class:(mpv)
 windowrulev2 = float,class:(.*speedcrunch)
 windowrulev2 = center,class:(.*speedcrunch)
 windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
+windowrulev2 = float,class:(.*Terraria.*)
 
 # Flameshot
 windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
