fix: custom clock modue for waybar to bypass tzdata issue.

--- a/waybar/config
+++ b/waybar/config
@@ -1,181 +1,186 @@
 {
   "position": "top", // Waybar position (top|bottom|left|right)
-  "layer": "top",
-  "height": 29, // Waybar height (to be removed for auto height)
-  "spacing": 3, // Gaps between modules (px)
-  // Choose the order of the modules
-  "modules-left": ["hyprland/workspaces", "hyprland/window", "custom/media"],
-  "modules-center": ["hyprland/language"],
-  "modules-right": ["mpd", "idle_inhibitor", "custom/cryptobtc", "custom/cryptoeth", "custom/cpulevels", "cpu", "memory", "backlight", "battery#bat2", "battery", "pulseaudio", "clock", "tray"],
-  "keyboard-state": {
-    "numlock": true,
-    "capslock": true,
-    "format": "{name} {icon}",
-    "format-icons": {
-      "locked": "",
-      "unlocked": ""
+    "layer": "top",
+    "height": 29, // Waybar height (to be removed for auto height)
+    "spacing": 3, // Gaps between modules (px)
+                  // Choose the order of the modules
+    "modules-left": ["hyprland/workspaces", "hyprland/window", "custom/media"],
+    "modules-center": ["hyprland/language"],
+    "modules-right": ["mpd", "idle_inhibitor", "custom/cryptobtc", "custom/cryptoeth", "custom/cpulevels", "cpu", "memory", "backlight", "battery#bat2", "battery", "pulseaudio", "custom/clock", "tray"],
+    "keyboard-state": {
+      "numlock": true,
+      "capslock": true,
+      "format": "{name} {icon}",
+      "format-icons": {
+        "locked": "",
+        "unlocked": ""
+      }
+    },
+    "hyprland/workspaces": {
+      "disable-scroll": true,
+      "all-outputs": false,
+      "on-click": "activate", 
+      "format": "{icon}",
+      "format-icons": {
+        "1": "1  ",
+        "2": "2  ",
+        "3": "3 﫯 ",
+        "4": "4  ",
+        "5": "5  ",
+        "6": "6  ",
+        "7": "7  ",
+        "8": "8 ﮊ ",
+        "9": "9  ",
+        "10": "10  ",
+      }
+    },
+    "hyprland/language": {
+      "format": "  {}",
+      "format-en": "en/us",
+      "format-es": "cat",
+      "format-de": "de",
+    },
+    "sway/mode": {
+      "format": "{}"
+    },
+    "mpd": {
+      "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{album:.45} - {title:.45}  {volume}%",
+      "format-disconnected": "Disconnected ",
+      "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+      "unknown-tag": "N/A",
+      "interval": 2,
+      "consume-icons": {
+        "on": " "
+      },
+      "random-icons": {
+        "off": "",
+        "on": " "
+      },
+      "repeat-icons": {
+        "on": " "
+      },
+      "single-icons": {
+        "on": "1 "
+      },
+      "state-icons": {
+        "paused": "",
+        "playing": ""
+      },
+      "tooltip-format": "MPD (connected)",
+      "tooltip-format-disconnected": "MPD (disconnected)"
+    },
+    "idle_inhibitor": {
+      "format": "{icon}",
+      "format-icons": {
+        "activated": "",
+        "deactivated": ""
+      }
+    },
+    "tray": {
+      "icon-size": 18,
+      "spacing": 4
+    },
+    "clock": {
+      "timezone": "Europe/Berlin",
+      "interval": 1,
+      "format": " {:%Y-%m-%d  %T}",
+      "tooltip-format": "<big>{:%d}</big>\n<tt><small>{calendar}</small></tt>",
+      "format-alt": "{:%Y-%m-%d}"
+    },
+    "custom/clock": {
+      "format": "{}",
+      "interval": 1,
+      "exec": "date +' %Y-%m-%d  %H:%M:%S'",
+    },
+    "custom/cryptoeth": {
+      "interval": 120,
+      "exec": "$HOME/.dotfiles/waybar/scripts/crypto ethereum"
+    },
+    "custom/cryptobtc": {
+      "interval": 120,
+      "exec": "$HOME/.dotfiles/waybar/scripts/crypto bitcoin"
+    },
+    "cpu": {
+      "format": "{usage}% ",
+      "tooltip": false
+    },
+    "custom/cpulevels": {
+      "interval": 1,
+      "exec": "$HOME/.dotfiles/waybar/scripts/cpu-levels"
+    },
+    "memory": {
+      "format": "{}% "
+    },
+    "temperature": {
+      // "thermal-zone": 2,
+      // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+      "critical-threshold": 80,
+      // "format-critical": "{temperatureC}°C {icon}",
+      "format": "{temperatureC}°C {icon}",
+      "format-icons": ["", "", ""]
+    },
+    "backlight": {
+      // "device": "acpi_video1",
+      "format": "{percent}% {icon}",
+      "format-icons": ["", ""]
+    },
+    "battery": {
+      "states": {
+        //"good": 95,
+        "warning": 30,
+        "critical": 15
+      },
+      "format": "{capacity}% {icon}",
+      "format-charging": "{capacity}% ",
+      "format-plugged": "{capacity}% ",
+      "format-alt": "{time} {icon}",
+      // "format-good": "", // An empty format will hide the module
+      // "format-full": "",
+      "format-icons": [" ", " ", " ", " ", " "]
+    },
+    "battery#bat2": {
+      "bat": "BAT2"
+    },
+    "network": {
+      // "interface": "wlp2*", // (Optional) To force the use of this interface
+      "format-wifi": "{essid} ({signalStrength}%) ",
+      "format-ethernet": "{ipaddr}/{cidr}",
+      "tooltip-format": "{ifname} via {gwaddr}",
+      "format-linked": "{ifname} (No IP)",
+      "format-disconnected": "Disconnected ⚠",
+      "format-alt": "{ifname}: {ipaddr}/{cidr}",
+      "on-click-right": "kitty --class=wm-floating-big nmtui"
+    },
+    "pulseaudio": {
+      // "scroll-step": 1, // %, can be a float
+      "format": "{volume}% {icon} {format_source}",
+      "format-bluetooth": "{volume}% {icon} {format_source}",
+      "format-bluetooth-muted": "婢 {icon} {format_source}",
+      "format-muted": "婢 {format_source}",
+      "format-source": "{volume}% ",
+      "format-source-muted": "",
+      "format-icons": {
+        "headphone": "",
+        "headset": "🎧",
+        "phone": "",
+        "portable": "",
+        "car": "",
+        "default": ["", "", ""]
+      },
+      "on-click": "pavucontrol",
+      "on-click-right": "kitty --class=wm-floating-big pulsemixer"
+    },
+    "custom/media": {
+      "format": "{icon} {}",
+      "return-type": "json",
+      "max-length": 40,
+      "format-icons": {
+        "spotify": "",
+        "default": "🎜"
+      },
+      "escape": true,
+      "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
+                                                                 // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     }
-  },
-  "hyprland/workspaces": {
-    "disable-scroll": true,
-    "all-outputs": false,
-    "on-click": "activate", 
-    "format": "{icon}",
-    "format-icons": {
-      "1": "1  ",
-      "2": "2  ",
-      "3": "3 﫯 ",
-      "4": "4  ",
-      "5": "5  ",
-      "6": "6  ",
-      "7": "7  ",
-      "8": "8 ﮊ ",
-      "9": "9  ",
-      "10": "10  ",
-    }
-  },
-  "hyprland/language": {
-    "format": "  {}",
-    "format-en": "en/us",
-    "format-es": "cat",
-    "format-de": "de",
-  },
-  "sway/mode": {
-    "format": "{}"
-  },
-  "mpd": {
-    "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{album:.45} - {title:.45}  {volume}%",
-    "format-disconnected": "Disconnected ",
-    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-    "unknown-tag": "N/A",
-    "interval": 2,
-    "consume-icons": {
-      "on": " "
-    },
-    "random-icons": {
-      "off": "",
-      "on": " "
-    },
-    "repeat-icons": {
-      "on": " "
-    },
-    "single-icons": {
-      "on": "1 "
-    },
-    "state-icons": {
-      "paused": "",
-      "playing": ""
-    },
-    "tooltip-format": "MPD (connected)",
-    "tooltip-format-disconnected": "MPD (disconnected)"
-  },
-  "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-      "activated": "",
-      "deactivated": ""
-    }
-  },
-  "tray": {
-    "icon-size": 18,
-    "spacing": 4
-  },
-  "clock": {
-    "timezone": "Europe/Berlin",
-    "interval": 1,
-    "format": " {:%Y-%m-%d  %T}",
-    "tooltip-format": "<big>{:%d}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%Y-%m-%d}"
-  },
-  "custom/cryptoeth": {
-    "interval": 120,
-    "exec": "$HOME/.dotfiles/waybar/scripts/crypto ethereum"
-  },
-  "custom/cryptobtc": {
-    "interval": 120,
-    "exec": "$HOME/.dotfiles/waybar/scripts/crypto bitcoin"
-  },
-  "cpu": {
-    "format": "{usage}% ",
-    "tooltip": false
-  },
-  "custom/cpulevels": {
-    "interval": 1,
-    "exec": "$HOME/.dotfiles/waybar/scripts/cpu-levels"
-  },
-  "memory": {
-    "format": "{}% "
-  },
-  "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C {icon}",
-    "format-icons": ["", "", ""]
-  },
-  "backlight": {
-    // "device": "acpi_video1",
-    "format": "{percent}% {icon}",
-    "format-icons": ["", ""]
-  },
-  "battery": {
-    "states": {
-      //"good": 95,
-      "warning": 30,
-      "critical": 15
-    },
-    "format": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
-    "format-icons": [" ", " ", " ", " ", " "]
-  },
-  "battery#bat2": {
-    "bat": "BAT2"
-  },
-  "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) ",
-    "format-ethernet": "{ipaddr}/{cidr}",
-    "tooltip-format": "{ifname} via {gwaddr}",
-    "format-linked": "{ifname} (No IP)",
-    "format-disconnected": "Disconnected ⚠",
-    "format-alt": "{ifname}: {ipaddr}/{cidr}",
-    "on-click-right": "kitty --class=wm-floating-big nmtui"
-  },
-  "pulseaudio": {
-    // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% {icon} {format_source}",
-    "format-bluetooth": "{volume}% {icon} {format_source}",
-    "format-bluetooth-muted": "婢 {icon} {format_source}",
-    "format-muted": "婢 {format_source}",
-    "format-source": "{volume}% ",
-    "format-source-muted": "",
-    "format-icons": {
-      "headphone": "",
-      "headset": "🎧",
-      "phone": "",
-      "portable": "",
-      "car": "",
-      "default": ["", "", ""]
-    },
-    "on-click": "pavucontrol",
-    "on-click-right": "kitty --class=wm-floating-big pulsemixer"
-  },
-  "custom/media": {
-    "format": "{icon} {}",
-    "return-type": "json",
-    "max-length": 40,
-    "format-icons": {
-      "spotify": "",
-      "default": "🎜"
-    },
-    "escape": true,
-    "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-    // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-  }
 }
 
