fix: hyprland in bonobo.

--- a/hyprland/hyprland-bonobo.conf
+++ b/hyprland/hyprland-bonobo.conf
@@ -3,7 +3,6 @@ monitor=DVI-I-1,1920x1080@60,0x0,1
 #monitor=DP-1,3860x2560@60,1920x0,2
 
 # Force NVIDIA card first.
-env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
 env = QT_ENABLE_HIDPI_SCALING=1
@@ -12,11 +11,5 @@ env = QT_ENABLE_HIDPI_SCALING=1
 source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # Overwrite stuff
-env = XCURSOR_SIZE,35
-
-debug {
-  damage_tracking = 0
-}
-opengl {
-    nvidia_anti_flicker = false
-}
+env = HYPRCURSOR_SIZE,20
+env = XCURSOR_SIZE,20
