feat: move all instances of swaylock to hyprlock.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -16,7 +16,7 @@ $myterm = kitty
   bind = $mod SHIFT, P, pseudo, # dwindle
 
 # Lock
-  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
+  bind = $mod SHIFT, Z, exec, hyprlock
 
 # Fuzzel
   # Launcher
