--- a/tschuss/tschuss.conf
+++ b/tschuss/tschuss.conf
@@ -82,6 +82,6 @@ lock: {
         height = 64;
     };
     description = "(l)ock";
-    action = "swaylock";
+    action = "hyprlock";
     bind = 108;     // 'l'
 };
