--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -1,88 +1,87 @@
-background {
-    monitor =
-    color = rgba(28, 20, 20, 1.0)
+# GENERAL
+general {
+  no_fade_in = true
+    no_fade_out = true
+    hide_cursor = false
+    grace = 0
+    disable_loading_bar = true
+}
 
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
-    blur_size = 7
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
+# BACKGROUND IMAGE
+background {
+  monitor =
+  path = /home/tsagrista/.dotfiles/assets/lock/lock-img.jpg
+  color = rgba(28, 20, 20, 1.0)
+
+  blur_passes = 2
+  noise = 0.117
+  brightness = 0.6
+  vibrancy = 0.2
+  vibrancy_darkness = 0.2
 }
 # Time
 label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +%H:%M:%S)"
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 125
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
+  monitor =
+  text = cmd[update:1000] echo "$(date +%H:%M:%S)"
+  text_align = center
+  color = rgba(200, 200, 200, 1.0)
+  font_size = 125
+  font_family = JetBrains Mono Extrabold
+  rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 330
-    halign = center
-    valign = center
+  position = 0, 330
+  halign = center
+  valign = center
 }
 # Date
 label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +%Y-%m-%d)"
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(150, 150, 150, 1.0)
-    font_size = 40
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
+  monitor =
+  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+  text_align = center
+  color = rgba(150, 150, 150, 1.0)
+  font_size = 40
+  font_family = JetBrains Mono
+  rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 190
-    halign = center
-    valign = center
+  position = 0, 190
+  halign = center
+  valign = center
 }
 
-# Keyboard layout
+# KEYBOARD LAYOUT
 label {
-    monitor =
-    text = $LAYOUT
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(100, 100, 100, 1.0)
-    font_size = 20
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
+  monitor =
+  text = $LAYOUT
+  text_align = center
+  color = rgba(100, 100, 100, 1.0)
+  font_size = 20
+  font_family = JetBrains Mono
+  rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 50
-    halign = center
-    valign = center
+  position = 0, 50
+  halign = center
+  valign = center
 }
 
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 300, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
+  size = 400, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(0, 0, 0, 0.2)
+    font_color = rgb(150, 150, 150)
+    fade_on_empty = false
+    rounding = -1
     check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-
-    position = 0, -20
+    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    hide_input = false
+    position = 0, -200
     halign = center
     valign = center
 }
+
