--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -42,6 +42,7 @@ windowrulev2 = center,class:(mpv)
 windowrulev2 = float,class:(.*speedcrunch)
 windowrulev2 = center,class:(.*speedcrunch)
 windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
+windowrulev2 = float,class:(thunderbird),title:(Feed Subscriptions)
 windowrulev2 = float,class:(.*Terraria.*)
 
 # Flameshot
