feat: Thunderbird 'about' window to floating.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -43,6 +43,7 @@ windowrulev2 = float,class:(.*speedcrunch)
 windowrulev2 = center,class:(.*speedcrunch)
 windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
 windowrulev2 = float,class:(thunderbird),title:(Feed Subscriptions)
+windowrulev2 = float,class:(thunderbird),title:(About Mozilla Thunderbird)
 windowrulev2 = float,class:(.*Terraria.*)
 
 # Flameshot
