feat: replace swayidle with hypridle.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -25,8 +25,8 @@ exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 exec-once = xset r rate 200 35 
 exec-once = numlockx 
 exec-once = mpDris2
-# Turn off screen after 5 minutes
-exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+# Launch hypridle daemon, see ./hypridle.conf
+exec-once = hypridle
 # Gnome keyring
 exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
 exec-once = gnome-keyring-daemon --start --components=secrets
