--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -31,6 +31,7 @@ windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
 # Positions
 windowrulev2 = float,class:(Gaia Sky)
+windowrulev2 = float,title:(Gaia Sky)
 windowrulev2 = center,class:(Gaia Sky)
 windowrulev2 = bordercolor rgb(33BC44),class:(Gaia Sky)
 windowrulev2 = float,class:(blueman-manager)
@@ -45,6 +46,7 @@ windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
 windowrulev2 = float,class:(thunderbird),title:(Feed Subscriptions)
 windowrulev2 = float,class:(thunderbird),title:(About Mozilla Thunderbird)
 windowrulev2 = float,class:(.*Terraria.*)
+windowrulev2 = float,class:(.*zenity.*)
 
 # Flameshot
 windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
