--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -45,6 +45,7 @@ windowrulev2 = center,class:(.*speedcrunch)
 windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
 windowrulev2 = float,class:(thunderbird),title:(Feed Subscriptions)
 windowrulev2 = float,class:(thunderbird),title:(About Mozilla Thunderbird)
+windowrulev2 = float,class:(thunderbird),title:(Write: .*)
 windowrulev2 = float,class:(.*Terraria.*)
 windowrulev2 = float,class:(.*zenity.*)
 
