fix: js and ts to edit.

--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -57,7 +57,9 @@ rules = [
   { name = "*.yml", use = "edit" },
   { name = "*.lua", use = ["edit", "text"] },
   { name = "*.log", use = "text" },
-  { name = "*.rs", use = "text" },
+  { name = "*.rs", use = ["edit", "text"] },
+  { name = "*.js", use = ["edit", "text"] },
+  { name = "*.ts", use = ["edit", "text"] },
   { name = "*.mp3", use = "audio" },
   { name = "*.wav", use = "audio" },
   { name = "*.ogg", use = "audio" },
