--- a/hyprland/hyprland-bonobo.conf
+++ b/hyprland/hyprland-bonobo.conf
@@ -1,6 +1,6 @@
 # Monitors
 monitor=DVI-I-1,1920x1080@60,0x0,1
-#monitor=DP-1,3860x2560@60,1920x0,2
+#monitor=HDMI-A-1,1920x1080@60,1920x0,1
 
 # Force NVIDIA card first.
 env = GDK_SCALE,1
