feat: increase idle timer.

--- a/hyprland/hypridle.conf
+++ b/hyprland/hypridle.conf
@@ -18,15 +18,15 @@ listener {
     on-resume = brightnessctl -r             # restore backlight
 }
 
-# lock at 5 minutes
+# lock at ~8.3 minutes
 listener {
-    timeout = 300                                 # 5 minutes
+    timeout = 500                                 # ~8.3 minutes
     on-timeout = pidof hyprlock || hyprlock       # lock screen when timeout has passed
 }
 
-# screen off at 10 minutes
+# screen off at 15 minutes
 listener {
-    timeout = 600                                 # 5.5 minutes
+    timeout = 900                                 # 15 minutes
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired
 }
