feat: use relative line numbering in helix.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,7 +1,7 @@
 theme = "onedark"
 
 [editor]
-line-number = "absolute"
+line-number = "relative"
 cursorline = true
 mouse = true
 color-modes = true
